--- a/tango_project/templates/index.html
+++ b/tango_project/templates/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+{% load static %}
+
 <html>
     <head>
     <title>Rango</title>
@@ -12,5 +14,6 @@
         <div>
             <a href="/rango/about/">About</a><br />
         </div>
+        <img src="{% static "images/rango.jpg" %}" alt="rango image" />
     </body>
 </html>
